<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/lytFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- LAYOUT SCROLL VIEW-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- WELCOME -->
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/oxanium_medium"
                android:text="Welcome back, User"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/searchView"
                app:layout_constraintTop_toTopOf="parent"

                />
            <!--SEARCH BAR -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:background="@color/dark60"
                app:iconifiedByDefault="false"
                app:layout_constraintBottom_toTopOf="@id/tvNewLeagues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"

                />
            <!--TV NEW EVENTS -->
            <TextView
                android:id="@+id/tvNewLeagues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/oxanium_medium"
                android:text="@string/new_tournaments_amp_leagues"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rvNewEvents"
                app:layout_constraintTop_toBottomOf="@id/searchView" />
            <!--RV NEW EVENTS -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewEvents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNewLeagues" />
            <!-- TV NEXT MATCHES -->
            <TextView
                android:id="@+id/tvNextMatches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/oxanium_medium"
                android:text="@string/next_matches"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rvNextMatches"
                app:layout_constraintTop_toBottomOf="@id/rvNewEvents" />
            <!-- RV NEXT MATCHES -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNextMatches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNextMatches" />
            <!-- TV LATEST RESULTS -->
            <TextView
                android:id="@+id/tvLatestResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/oxanium_medium"
                android:text="@string/latest_results"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rvLatetsResults"
                app:layout_constraintTop_toBottomOf="@id/rvNextMatches" />
            <!-- RV LATEST RESULTS -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatetsResults"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLatestResults" />
            <!-- TV MY TEAMS -->
            <TextView
                android:id="@+id/tvMyTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/oxanium_medium"
                android:text="My teams"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rvMyTeams"
                app:layout_constraintTop_toBottomOf="@id/rvLatetsResults" />
            <!-- RV MY TEAMS -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMyTeams"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMyTeams" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!-- FOOTER -->
    <LinearLayout
        android:id="@+id/lytFooter"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/primary140"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">
        <!-- CV HOME -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary140">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"

                >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icn_home_filled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Home" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CV TEAMS -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary140">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icn_teams" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teams"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Teams" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CV LEAGUES -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary140">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icn_league" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/leagues"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Leagues" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CV INFO -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/primary140">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Info" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>